--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@ video {
   position: fixed;
   left: 0;
   top: 0;
-
+  height: 100vh;
+  width: 100vw;
+  background: rgba(255, 255,255,0.5)
 }
 
 /* Container */
@@ -48,6 +50,7 @@ video {
   z-index: 2;
   display: flex;
   justify-content: center;
+  background: rgba(255, 255,255,0.85)
 
 }
 
@@ -129,16 +132,18 @@ li span {
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
   .video-background {
-
+   height: 100vh;
+   width: 100vh;
   }
   
   video {
-
+    object-fit: cover;
     margin-top: -1px;
   }
 
   .container {
-
+    min-width: unset;
+    width: 95vw;
     min-height: 245px;
     padding: 20px;
     margin: 10px;
